force-app/main/default/objects/Photo__c/fields/CountryTip__c.field-meta.xml
<CustomField>
    <fullName>CountryTip__c</fullName>
    <label>Country Tip</label>
    <type>TextArea</type>
</CustomField>