force-app/main/default/objects/Photo__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <formula>Location__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>