force-app/main/default/objects/Photo__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>