force-app/main/default/objects/Photo__c/fields/StaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>StaticResourceName__c</fullName>
    <label>Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>